--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "description": "Demo app for Web container demonstrations",
   "main": "app.js",
-  "author": "Nigel Poulton <nigelpoulton@hotmail.com>",
-  "license": "Will be full of vulnerabilities!",
+  "author": "*******",
+  "license": "******",
   "dependencies": {
     "express": "4.16.3",
     "pug": "2.0.3"
